pushing include statement. still not proper way to setup but definitly deepening my understanding of cmake dependency referencing system

--- a/CMAKE-CarRental/CMakeLists.txt
+++ b/CMAKE-CarRental/CMakeLists.txt
@@ -9,9 +9,10 @@ project(
 
 set(PROJECT_STATIC_SRC_DIR "CMAKE-CarRental")
 
+include("${PROJECT_STATIC_SRC_DIR}/Car.cmake")
+
 add_executable(
 	${PROJECT_NAME}
 	Main.cpp
-	"${PROJECT_STATIC_SRC_DIR}/Car.cpp"
-	"${PROJECT_STATIC_SRC_DIR}/CarMaintenance.cpp"
+	${CAR_RENTAL}
 	)
